cmake_minimum_required(VERSION 3.0.2)
project (Vention)

 
add_subdirectory (src)



## Generate messages in the 'msg' folder
# add_message_files(
#   FILES
#   Message1.msg
#   Message2.msg
# ) 
#generate_messages(
#   DEPENDENCIES
#   std_msgs
#   geometry_msgs
# )
#add_message_files(
#   FILES
#   tong.msg
#   he.msg

# )
# catkin_package(
#  INCLUDE_DIRS include
#  CATKIN_DEPENDS geometry_msgs roscpp rospy 
#  DEPENDS system_lib 
#  message_runtime
 # ompl
#)

#include_directories(
# include
#  ${catkin_INCLUDE_DIRS}
#)
